--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,21 +1,47 @@
 body {
+    margin: 1em;
+    border: 0;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
+
 }
 h1 {
     align-self: center;
 }
+ul.nav-links{
+    margin-left:0;
+    padding: 0;
 
-ul li{
+}
+
+
+.nav-links{
 
     display: flex;
     flex-direction: column;
     align-self: center;
     justify-content: space-between;
+    align-content: center;
     margin: .5em;
     padding: .5em;
     list-style: none;
     /*margin:  .75em .5em .5em .5em;*/
     width: 100%;
     background: darkgray;
+    align-items: center;
+
+}
+.nav-links li{
+    margin: 1em;
+}
+.alert-info{
+border: 1px solid black;
+background-color: #BDFFFF;
+    text-align: center;
+    padding: 1em;
+
+}
+.alert-info a{
+    text-decoration: none;
 }
