--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -4,44 +4,53 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    font-family: sans-serif;
 
 }
+
 h1 {
     align-self: center;
 }
-ul.nav-links{
-    margin-left:0;
+
+ul.nav-links {
+    margin-left: 0;
     padding: 0;
 
 }
 
 
-.nav-links{
+.nav-links {
 
     display: flex;
     flex-direction: column;
-    align-self: center;
-    justify-content: space-between;
-    align-content: center;
-    margin: .5em;
-    padding: .5em;
+    justify-content: space-around;
     list-style: none;
-    /*margin:  .75em .5em .5em .5em;*/
-    width: 100%;
-    background: darkgray;
     align-items: center;
+    margin: 0;
 
 }
-.nav-links li{
-    margin: 1em;
+
+.nav-links li {
+    margin: .5em;
+    padding: .5em;
+    width: 100%;
+    background: #CCCCCC;
+    text-align: center;
 }
-.alert-info{
-border: 1px solid black;
-background-color: #BDFFFF;
+
+.alert-info {
+    border: 1px solid black;
+    background-color: #BDFFFF;
     text-align: center;
     padding: 1em;
 
 }
-.alert-info a{
+
+.alert-info a {
     text-decoration: none;
+}
+
+footer{
+    /*align-self: flex-end;*/
+    align-content: flex-start;
 }
